--- a/.react-eslintrc
+++ b/.react-eslintrc
@@ -41,16 +41,16 @@
     "react/jsx-uses-vars": 2,
     "react/no-danger": 2,
     "react/no-deprecated": 2,
-    "react/no-did-mount-set-state": 2,
+    "react/no-did-mount-set-state": 0,
     "react/no-did-update-set-state": 2,
     "react/no-direct-mutation-state": 2,
     "react/no-is-mounted": 2,
     "react/no-multi-comp": 2,
-    "react/no-set-state": 2,
+    "react/no-set-state": 0,
     "react/no-string-refs": 2,
     "react/no-unknown-property": 2,
     "react/prefer-es6-class": 2,
-    "react/prefer-stateless-function": 2,
+    "react/prefer-stateless-function": 0,
     "react/prop-types": 2,
     "react/react-in-jsx-scope": 2,
     "react/require-extension": 2,
@@ -62,6 +62,7 @@
         "static-methods",
         "lifecycle",
         "/^on.+$/",
+        "/^handle.+$/",
         "/^(get|set)(?!(InitialState$|DefaultProps$|ChildContext$)).+$/",
         "everything-else",
         "/^render.+$/",
