--- a/.eslintrc
+++ b/.eslintrc
@@ -32,9 +32,12 @@
     "no-sparse-arrays": 2,
     "no-unexpected-multiline": 2,
     "no-unreachable": 2,
-    "no-unused-vars": ["error", { "vars": "all", "args": "after-used" }],
+    "no-unused-vars": ["error", {
+      "vars": "all",
+      "args": "after-used"
+    }],
     "use-isnan": 2,
-    "valid-jsdoc": [ 2, {
+    "valid-jsdoc": [2, {
       "requireReturnDescription": false,
       "requireReturn": false,
       "requireParamDescription": false,
@@ -45,7 +48,7 @@
     "valid-typeof": 2,
     "accessor-pairs": 2,
     "block-scoped-var": 2,
-    "complexity": [ 2, 10 ],
+    "complexity": [2, 10],
     "consistent-return": 0,
     "curly": 2,
     "default-case": 2,
@@ -72,17 +75,13 @@
     "no-lone-blocks": 2,
     "no-loop-func": 2,
     "no-magic-numbers": 0,
-    "no-multi-spaces":  [
-      "error",
-      {
-        "exceptions":
-        {
-          "Property": true,
-          "VariableDeclarator": true,
-          "ImportDeclaration": true
-        }
+    "no-multi-spaces": ["error", {
+      "exceptions": {
+        "Property": true,
+        "VariableDeclarator": true,
+        "ImportDeclaration": true
       }
-    ],
+    }],
     "no-multi-str": 2,
     "no-native-reassign": 2,
     "no-new-func": 2,
@@ -104,16 +103,17 @@
     "no-useless-concat": 2,
     "one-var-declaration-per-line": [2, "always"],
     "no-void": 2,
-    "no-warning-comments": [ 2, { "terms": [ "fixme" ], "location": "anywhere" }],
+    "no-warning-comments": [2, {
+      "terms": ["fixme"],
+      "location": "anywhere"
+    }],
     "no-with": 2,
     "radix": 2,
     "vars-on-top": 0,
-    "wrap-iife": [ 2, "outside" ],
+    "wrap-iife": [2, "outside"],
     "yoda": 2,
 
-
     "strict": 0,
-
 
     "no-catch-shadow": 2,
     "no-delete-var": 2,
@@ -126,26 +126,33 @@
     "no-use-before-define": 2,
     "eol-last": 0,
     "func-names": 0,
-    "func-style": [ 2, "declaration", { "allowArrowFunctions": true } ],
+    "func-style": [2, "declaration", {
+      "allowArrowFunctions": true
+    }],
     "id-length": 0,
-    "indent": [2, 2, { "SwitchCase": 1 }],
-    "key-spacing"     : [
-      "error",
-      {
-        "singleLine" : {
-          "beforeColon" : false,
-          "afterColon"  : true
-        },
-        "multiLine"  : {
-          "beforeColon" : false,
-          "afterColon"  : true,
-        }
+    "indent": [2, 2, {
+      "SwitchCase": 1
+    }],
+    "key-spacing": ["error",{
+      "singleLine": {
+        "beforeColon": false,
+        "afterColon": true
+      },
+      "multiLine": {
+        "beforeColon": false,
+        "afterColon": true
       }
-    ],
-    "keyword-spacing": [2, {"before": true, "after": true}],
+    }],
+    "keyword-spacing": [2, {
+      "before": true,
+      "after": true
+    }],
     "linebreak-style": 0,
-    "lines-around-comment": [ 2, { "beforeBlockComment": true, "beforeLineComment": false } ],
-    "max-nested-callbacks": [ 2, 3 ],
+    "lines-around-comment": [2, {
+      "beforeBlockComment": true,
+      "beforeLineComment": false
+    }],
+    "max-nested-callbacks": [2, 3],
     "new-cap": 2,
     "new-parens": 2,
     "newline-after-var": 0,
@@ -153,34 +160,52 @@
     "no-continue": 2,
     "no-lonely-if": 0,
     "no-mixed-spaces-and-tabs": 2,
-    "no-multiple-empty-lines": [ 2, { "max": 2 } ],
+    "no-multiple-empty-lines": [2, {
+      "max": 2
+    }],
     "no-negated-condition": 2,
     "no-nested-ternary": 2,
     "no-new-object": 2,
     "no-spaced-func": 2,
-    "no-trailing-spaces": [ 2, { "skipBlankLines": true } ],
+    "no-trailing-spaces": [2, {
+      "skipBlankLines": true
+    }],
     "no-underscore-dangle": 0,
     "no-unneeded-ternary": 2,
-    "object-curly-spacing": [ 2, "always" ],
-    "one-var": [ 2, "never" ],
+    "object-curly-spacing": [2, "always"],
+    "one-var": [2, "never"],
     "operator-assignment": 0,
-    "operator-linebreak": [ 2, "before", { "overrides": { "?": "after" } } ],
+    "operator-linebreak": [2, "before", {
+      "overrides": {
+        "?": "after"
+      }
+    }],
     "padded-blocks": 0,
-    "quote-props": [ 2, "consistent-as-needed" ],
-    "quotes": [ 2, "single" ],
+    "quote-props": [2, "consistent-as-needed"],
+    "quotes": [2, "single"],
     "require-jsdoc": 0,
     "semi-spacing": 2,
-    "semi": [ 2, "always" ],
+    "semi": [2, "always"],
     "sort-vars": 0,
-    "space-before-blocks": [ 2, "always" ],
-    "space-before-function-paren": [ 2, { "anonymous": "always", "named": "never" } ],
-    "space-in-parens": [ 2, "never" ],
-    "space-infix-ops": [ 2, { "int32Hint": false } ],
+    "space-before-blocks": [2, "always"],
+    "space-before-function-paren": [2, {
+      "anonymous": "always",
+      "named": "never"
+    }],
+    "space-in-parens": [2, "never"],
+    "space-infix-ops": [2, {
+      "int32Hint": false
+    }],
     "space-return-throw-cases": 0,
-    "space-unary-ops": [ 2, { "words": true, "nonwords": false } ],
-    "spaced-comment": [ 2, "always", { "exceptions": [ "*", "=", "eslint" ], "markers": ["TODO:", "HACK:"] } ],
+    "space-unary-ops": [2, {
+      "words": true,
+      "nonwords": false
+    }],
+    "spaced-comment": [2, "always", {
+      "exceptions": ["*", "=", "eslint"],
+      "markers": ["TODO:", "HACK:"]
+    }],
     "wrap-regex": 2,
-
 
     "callback-return": 0,
     "global-require": 2,
@@ -192,19 +217,25 @@
     "no-restricted-modules": 0,
     "no-sync": 2,
 
-
-    "arrow-parens": [2, "as-needed", { "requireForBlockBody": true }],
-    "no-confusing-arrow": [ 2, { "allowParens": true } ],
+    "arrow-parens": [2, "as-needed", {
+      "requireForBlockBody": true
+    }],
+    "no-confusing-arrow": [2, {
+      "allowParens": true
+    }],
     "arrow-body-style": 0,
-    "arrow-spacing": [ 2, { "before": true, "after": true } ],
+    "arrow-spacing": [2, {
+      "before": true,
+      "after": true
+    }],
     "constructor-super": 2,
-    "generator-star-spacing": [ 2, "after" ],
+    "generator-star-spacing": [2, "after"],
     "no-class-assign": 2,
     "no-const-assign": 2,
     "no-dupe-class-members": 2,
     "no-this-before-super": 2,
     "no-var": 2,
-    "object-shorthand": [ 2, "always" ],
+    "object-shorthand": [2, "always"],
     "prefer-arrow-callback": 0,
     "prefer-const": 2,
     "prefer-numeric-literals": 2,
@@ -222,32 +253,33 @@
     "require-yield": 2
   },
 
-
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "binaryLiterals": true,
-    "blockBindings": true,
-    "classes": true,
-    "defaultParams": true,
-    "destructuring": true,
-    "forOf": true,
-    "generators": true,
-    "modules": false,
-    "objectLiteralComputedProperties": true,
-    "objectLiteralDuplicateProperties": false,
-    "objectLiteralShorthandMethods": true,
-    "objectLiteralShorthandProperties": true,
-    "octalLiterals": true,
-    "regexUFlag": false,
-    "regexYFlag": false,
-    "restParams": true,
-    "spread": true,
-    "superInFunctions": true,
-    "templateStrings": true,
-    "unicodeCodePointEscapes": true,
-    "globalReturn": false,
-    "jsx": false,
-    "experimentalObjectRestSpread": false
+  "parserOptions": {
+    "ecmaFeatures": {
+      "arrowFunctions": true,
+      "binaryLiterals": true,
+      "blockBindings": true,
+      "classes": true,
+      "defaultParams": true,
+      "destructuring": true,
+      "forOf": true,
+      "generators": true,
+      "modules": false,
+      "objectLiteralComputedProperties": true,
+      "objectLiteralDuplicateProperties": false,
+      "objectLiteralShorthandMethods": true,
+      "objectLiteralShorthandProperties": true,
+      "octalLiterals": true,
+      "regexUFlag": false,
+      "regexYFlag": false,
+      "restParams": true,
+      "spread": true,
+      "superInFunctions": true,
+      "templateStrings": true,
+      "unicodeCodePointEscapes": true,
+      "globalReturn": false,
+      "jsx": false,
+      "experimentalObjectRestSpread": false
+    }
   },
 
   "env": {
