--- a/.react-eslintrc
+++ b/.react-eslintrc
@@ -6,33 +6,39 @@
   "rules": {
     "no-invalid-this": 0,
     "no-extra-parens": [0, "all", {
-      conditionalAssign: true,
-      nestedBinaryExpressions: false,
-      returnAssign: false,
+      "conditionalAssign": true,
+      "nestedBinaryExpressions": false,
+      "returnAssign": false
     }],
     "require-jsdoc": 0,
     "valid-jsdoc": 0,
     "jsx-quotes": [2, "prefer-double"],
-    "react/display-name": [ 2, { "ignoreTranspilerName": false } ],
+    "react/display-name": [2, {
+      "ignoreTranspilerName": false
+    }],
     "react/forbid-prop-types": 2,
     "react/jsx-boolean-value": 2,
     "react/jsx-closing-bracket-location": 2,
-    "react/jsx-curly-spacing": [ 2, "never", { "allowMultiline": true } ],
+    "react/jsx-curly-spacing": [2, "never", {
+      "allowMultiline": true
+    }],
     "react/jsx-handler-names": 2,
-    "react/jsx-indent-props": [ 2, 2 ],
-    "react/jsx-indent": [ 2, 2 ],
+    "react/jsx-indent-props": [2, 2],
+    "react/jsx-indent": [2, 2],
     "react/jsx-key": 2,
-    "react/jsx-max-props-per-line": [ 2, { "maximum": 4 }],
+    "react/jsx-max-props-per-line": [2, {
+      "maximum": 4
+    }],
     "react/jsx-no-bind": 2,
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-literals": 0,
     "react/jsx-no-undef": 2,
     "react/jsx-pascal-case": 2,
-    "react/jsx-sort-prop-types": [ 0, {
+    "react/jsx-sort-prop-types": [0, {
       "callbacksLast": false,
       "ignoreCase": true
     }],
-    "react/jsx-sort-props": [ 0, {
+    "react/jsx-sort-props": [0, {
       "callbacksLast": true,
       "shorthandFirst": true,
       "ignoreCase": true
@@ -53,12 +59,15 @@
     "react/prefer-stateless-function": 0,
     "react/prop-types": 2,
     "react/react-in-jsx-scope": 2,
-    "react/require-extension": 2,
     "react/require-render-return": 2,
     "react/self-closing-comp": 2,
-    "react/jsx-space-before-closing": [2, "always"],
+    "react/jsx-tag-spacing": [2, {
+      "afterOpening": "never",
+      "beforeSelfClosing": "always",
+      "closingSlash": "never"
+    }],
     "react/sort-comp": [2, {
-      order: [
+      "order": [
         "static-methods",
         "lifecycle",
         "/^on.+$/",
@@ -67,14 +76,16 @@
         "everything-else",
         "/^render.+$/",
         "render"
-      ],
+      ]
     }],
-    "react/wrap-multilines": 2
+    "react/jsx-wrap-multilines": 2
   },
-  "ecmaFeatures": {
-    "destructuring": true,
-    "modules": true,
-    "jsx": true,
-    "experimentalObjectRestSpread": true
+  "parserOptions": {
+    "ecmaFeatures": {
+      "destructuring": true,
+      "modules": true,
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
   }
 }
