--- a/.eslintrc
+++ b/.eslintrc
@@ -75,13 +75,7 @@
     "no-lone-blocks": 2,
     "no-loop-func": 2,
     "no-magic-numbers": 0,
-    "no-multi-spaces": ["error", {
-      "exceptions": {
-        "Property": true,
-        "VariableDeclarator": true,
-        "ImportDeclaration": true
-      }
-    }],
+    "no-multi-spaces": 2,
     "no-multi-str": 2,
     "no-native-reassign": 2,
     "no-new-func": 2,
