--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   "devDependencies": {
     "eslint": "^4.8.0",
     "eslint-plugin-react": "^7.4.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.5.3"
+    "mocha": "^3.5.3",
+    "nyc": "^11.2.1"
   },
   "peerDependency": {
     "eslint": ">= 4"
