--- a/.eslintrc
+++ b/.eslintrc
@@ -146,7 +146,7 @@
       "beforeBlockComment": true,
       "beforeLineComment": false
     }],
-    "max-nested-callbacks": [2, 3],
+    "max-nested-callbacks": 0,
     "new-cap": 2,
     "new-parens": 2,
     "newline-after-var": 0,
@@ -175,7 +175,7 @@
       }
     }],
     "padded-blocks": 0,
-    "quote-props": [2, "consistent-as-needed"],
+    "quote-props": [2, "as-needed"],
     "quotes": [2, "single"],
     "require-jsdoc": 0,
     "semi-spacing": 2,
